--- a/package.json
+++ b/package.json
@@ -10,14 +10,23 @@
   },
   "private": true,
   "dependencies": {
+    "@agm/core": "^3.0.0-beta.0",
     "@angular/animations": "~12.2.0",
+    "@angular/cdk": "^12.0.0",
     "@angular/common": "~12.2.0",
     "@angular/compiler": "~12.2.0",
     "@angular/core": "~12.2.0",
     "@angular/forms": "~12.2.0",
+    "@angular/google-maps": "^12.2.12",
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "@asymmetrik/ngx-leaflet": "^8.1.0",
+    "@nebular/eva-icons": "8.0.0",
+    "@nebular/theme": "^8.0.0",
+    "@types/googlemaps": "^3.39.13",
+    "eva-icons": "^1.1.2",
+    "leaflet": "^1.7.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
@@ -26,7 +35,9 @@
     "@angular-devkit/build-angular": "~12.2.10",
     "@angular/cli": "~12.2.10",
     "@angular/compiler-cli": "~12.2.0",
+    "@schematics/angular": "~12.2.10",
     "@types/jasmine": "~3.8.0",
+    "@types/leaflet": "^1.7.5",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.8.0",
     "karma": "~6.3.0",
