--- a/package.json
+++ b/package.json
@@ -10,21 +10,21 @@
   },
   "private": true,
   "dependencies": {
-    "@agm/core": "^3.0.0-beta.0",
+    "@agm/core": "^1.1.0",
     "@angular/animations": "~12.2.0",
     "@angular/cdk": "^12.0.0",
     "@angular/common": "~12.2.0",
     "@angular/compiler": "~12.2.0",
     "@angular/core": "~12.2.0",
     "@angular/forms": "~12.2.0",
-    "@angular/google-maps": "^12.2.12",
+    "@angular/google-maps": "^11.2.13",
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
     "@asymmetrik/ngx-leaflet": "^8.1.0",
     "@nebular/eva-icons": "8.0.0",
     "@nebular/theme": "^8.0.0",
-    "@types/googlemaps": "^3.39.13",
+    "@types/googlemaps": "3.39.14",
     "eva-icons": "^1.1.2",
     "leaflet": "^1.7.1",
     "rxjs": "~6.6.0",
