--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@asymmetrik/ngx-leaflet": "^8.1.0",
     "@nebular/eva-icons": "8.0.0",
     "@nebular/theme": "^8.0.0",
-    "@types/googlemaps": "3.39.14",
+    "@types/googlemaps": "^3.43.3",
     "eva-icons": "^1.1.2",
     "leaflet": "^1.7.1",
     "rxjs": "~6.6.0",
