--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "nebular",
-
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -10,7 +9,7 @@
   },
   "private": true,
   "dependencies": {
-    "@agm/core": "^1.1.0",
+    "@agm/core": "^1.0.0",
     "@angular/animations": "~12.2.0",
     "@angular/cdk": "^12.0.0",
     "@angular/common": "~12.2.0",
@@ -24,7 +23,6 @@
     "@asymmetrik/ngx-leaflet": "^8.1.0",
     "@nebular/eva-icons": "8.0.0",
     "@nebular/theme": "^8.0.0",
-    "@types/googlemaps": "^3.43.3",
     "eva-icons": "^1.1.2",
     "leaflet": "^1.7.1",
     "rxjs": "~6.6.0",
@@ -35,7 +33,9 @@
     "@angular-devkit/build-angular": "~12.2.10",
     "@angular/cli": "~12.2.10",
     "@angular/compiler-cli": "~12.2.0",
+    "@angular/google-maps": "^11.0.0",
     "@schematics/angular": "~12.2.10",
+    "@types/googlemaps": "^3.43.3",
     "@types/jasmine": "~3.8.0",
     "@types/leaflet": "^1.7.5",
     "@types/node": "^12.11.1",
